--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3.], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1,2,3], dtype='float32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,49 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(20, 5)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([2, 2, 2, 2, 2, 2, 2, 2, 2, 2]),\n",
-       " array([[17, 35, 69, 21, 97],\n",
-       "        [43, 81,  0, 72, 46],\n",
-       "        [49, 66, 41,  0, 53],\n",
-       "        [47,  0,  8,  0, 21],\n",
-       "        [ 0,  0,  0, 40, 48],\n",
-       "        [ 5,  0, 42, 32, 31],\n",
-       "        [ 0, 38, 65, 81, 89],\n",
-       "        [ 0,  0,  0, 46,  0],\n",
-       "        [66,  0, 71, 89, 66],\n",
-       "        [48,  1, 72, 80,  0],\n",
-       "        [ 0,  0, 72,  0,  0],\n",
-       "        [ 0, 51, 90, 75, 43],\n",
-       "        [67, 59, 63,  5, 35],\n",
-       "        [ 0,  9,  0,  0,  0],\n",
-       "        [ 0, 77, 88,  0,  0],\n",
-       "        [13, 22,  4,  0, 52],\n",
-       "        [98, 14, 49,  0, 84],\n",
-       "        [ 0, 79, 19,  0,  0],\n",
-       "        [ 0,  0, 37, 11,  0],\n",
-       "        [ 7, 93, 28,  0, 76]]),\n",
-       " 20,\n",
-       " 3.2)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -117,7 +97,55 @@
     "if op_per_mch_min < 1 or op_per_mch_max > n_m:\n",
     "    print(f'Error from Instance Generation: [{op_per_mch_min},{op_per_mch_max}] '\n",
     "            f'with num_mch : {n_m}')\n",
-    "    sys.exit()\n",
+    "    sys.exit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 2, 2, 2, 2, 2, 2, 2, 2, 2]),\n",
+       " array([[14, 65, 35, 86, 80],\n",
+       "        [53, 88, 98,  0, 70],\n",
+       "        [66, 46,  0, 64,  0],\n",
+       "        [ 0, 66,  0,  0,  0],\n",
+       "        [ 0,  0,  4,  0,  0],\n",
+       "        [43, 92, 60,  6, 53],\n",
+       "        [82,  0, 11,  0, 57],\n",
+       "        [73,  0, 82, 40,  0],\n",
+       "        [16,  0,  0, 80, 52],\n",
+       "        [ 0, 60, 63, 64, 44],\n",
+       "        [30, 24,  0, 10,  0],\n",
+       "        [ 0, 43, 15,  0, 43],\n",
+       "        [ 0, 83,  0,  0, 53],\n",
+       "        [47,  6, 68, 31,  0],\n",
+       "        [ 0,  0,  0, 50,  0],\n",
+       "        [ 0,  0,  6, 27,  4],\n",
+       "        [ 1, 34, 69, 75,  3],\n",
+       "        [ 0, 89, 79, 75, 20],\n",
+       "        [31, 35,  0,  0, 18],\n",
+       "        [ 0, 95,  1,  0,  0]]),\n",
+       " 20,\n",
+       " 3.1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "n_op = int(n_j * op_per_job)\n",
     "job_length = np.full(shape=(n_j,), fill_value=op_per_job, dtype=int)\n",
@@ -134,6 +162,61 @@
     "        op_pt[row][inf_pos] = 0\n",
     "\n",
     "job_length, op_pt, len(op_pt), op_per_mch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 2, 2, 2, 1, 2, 1, 2, 2, 2]),\n",
+       " array([[65,  0, 42, 36,  0],\n",
+       "        [86,  0,  0,  0,  0],\n",
+       "        [32,  0,  0,  0,  0],\n",
+       "        [ 0, 89, 12, 67,  1],\n",
+       "        [80, 52, 70, 15, 22],\n",
+       "        [ 0, 57,  0, 38, 19],\n",
+       "        [ 0,  0, 95, 11,  0],\n",
+       "        [16,  2, 62, 70, 91],\n",
+       "        [44, 54, 87, 23,  0],\n",
+       "        [ 0, 14, 49, 52, 63],\n",
+       "        [71,  5, 13, 31,  2],\n",
+       "        [94,  0,  0,  0, 14],\n",
+       "        [ 3,  0,  0,  0, 51],\n",
+       "        [ 0, 80, 73, 59, 83],\n",
+       "        [ 9, 19,  0, 60, 92],\n",
+       "        [95, 43, 85,  0, 20],\n",
+       "        [ 0, 90,  9, 14, 84],\n",
+       "        [66, 46, 46, 84, 91]]),\n",
+       " 18,\n",
+       " 3.4444444444444446)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Modify here for variable number of operations per job\n",
+    "job_length = np.random.randint(low=1, high=op_per_job + 1, size=n_j)\n",
+    "n_op = np.sum(job_length)\n",
+    "\n",
+    "op_use_mch = np.random.randint(low=op_per_mch_min, high=op_per_mch_max + 1, size=n_op)\n",
+    "op_per_mch = np.mean(op_use_mch)\n",
+    "op_pt = np.random.randint(low=low, high=high + 1, size=(n_op, n_m))\n",
+    "\n",
+    "for row in range(op_pt.shape[0]):\n",
+    "    mch_num = int(op_use_mch[row])\n",
+    "    if mch_num < n_m:\n",
+    "        inf_pos = np.random.choice(np.arange(0, n_m), n_m - mch_num, replace=False)\n",
+    "        op_pt[row][inf_pos] = 0\n",
+    "\n",
+    "job_length, op_pt, len(op_pt),  op_per_mch"
    ]
   },
   {
@@ -225,19 +308,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_init = config.n_j\n",
-    "\n",
+    "job_init = 10   #工件数量\n",
+    "num_mas = 5     #机器数\n",
+    "opes_per_job_min, opes_per_job_max = 5, 10  \n",
+    "mas_per_ope_min, mas_per_ope_max = 1, 5    #每个机器最大的加工数量\n",
     "num_jobs = job_init\n",
-    "if not self.flag_same_opes:\n",
-    "    self.nums_ope = [random.randint(self.opes_per_job_min, self.opes_per_job_max) for _ in range(self.num_jobs)]\n",
-    "self.num_opes = sum(self.nums_ope)\n",
-    "self.nums_option = [random.randint(self.mas_per_ope_min, self.mas_per_ope_max) for _ in range(self.num_opes)]\n",
-    "self.num_options = sum(self.nums_option)\n",
     "\n",
-    "self.ope_ma = []\n",
-    "for val in self.nums_option:\n",
-    "    self.ope_ma = self.ope_ma + sorted(random.sample(range(1, self.num_mas + 1), val))\n",
-    "self.proc_time = []\n",
+    "nums_ope = [random.randint(opes_per_job_min, opes_per_job_max) for _ in range(num_jobs)]  ##随机生成每个工件的操作数\n",
+    "num_opes = sum(nums_ope)\n",
+    "nums_option = [random.randint(mas_per_ope_min, mas_per_ope_max) for _ in range(num_opes)] ##随机生成每个操作可行的机器数量\n",
+    "num_options = sum(nums_option)\n",
+    "\n",
+    "ope_ma = []\n",
+    "for val in nums_option:\n",
+    "    ope_ma = ope_ma + sorted(random.sample(range(1, num_mas + 1), val))\n",
+    "proc_time = []\n",
     "\n",
     "self.proc_times_mean = [random.randint(self.proctime_per_ope_min, self.proctime_per_ope_max) for _ in\n",
     "                        range(self.num_opes)]\n",
@@ -288,6 +373,54 @@
     "job_length, op_pt = text_to_matrix(lines_doc)\n",
     "\n",
     "job_length, op_pt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([257.77272383, 767.46712808])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "range_pose=0.3\n",
+    "target_pose=(2*np.random.rand(2)-1)*range_pose + [0.5, 0.5] # around center (0.5,0.5), range 0.3\n",
+    "screen_size=1000\n",
+    "target_pose=target_pose*screen_size\n",
+    "target_pose\n",
+    "\n",
+    "# env=Reacher(target_pos=target_pose, render=True)\n",
+    "# return env, target_pose\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99163272, 0.53982156])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(2)"
    ]
   }
  ],
