Ec Mk出了个好点的结果

--- a/experiment/energy.ipynb
+++ b/experiment/energy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "488.46801371000004"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +228,194 @@
     "\n",
     "completion_time_upper_bound = max(job_completion_times)\n",
     "completion_time_upper_bound\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.42553191 0.        ]\n",
+      " [0.32978723 1.        ]\n",
+      " [0.4787234  0.        ]\n",
+      " [0.5        0.88297872]\n",
+      " [0.5106383  0.        ]\n",
+      " [0.40425532 0.86170213]]\n",
+      "[[0.72955563        inf]\n",
+      " [0.56540561 0.41026295]\n",
+      " [0.82075008        inf]\n",
+      " [0.85722786 0.36225346]\n",
+      " [0.87546676        inf]\n",
+      " [0.69307785 0.35352446]]\n",
+      "3.551813331430659\n"
+     ]
+    }
+   ],
+   "source": [
+    "power = np.array([1.71445573, 0.41026295])\n",
+    "\n",
+    "\n",
+    "op_pt = np.array([[40,  0],\n",
+    "       [31, 94],\n",
+    "       [45,  0],\n",
+    "       [47, 83],\n",
+    "       [48,  0],\n",
+    "       [38, 81]])\n",
+    "\n",
+    "def compute_energy(power, op_pt):\n",
+    "\n",
+    "       pt_lower_bound = np.min(op_pt)\n",
+    "       pt_upper_bound = np.max(op_pt)\n",
+    "       op_pt = (op_pt - pt_lower_bound) / (pt_upper_bound - pt_lower_bound + 1e-8)\n",
+    "       print(op_pt)\n",
+    "       energy = op_pt * power\n",
+    "\n",
+    "       # print(energy)\n",
+    "\n",
+    "       energy = np.where(energy == 0, np.inf, energy)\n",
+    "\n",
+    "       print(energy)\n",
+    "\n",
+    "       print(np.sum(np.min(energy, axis=-1)))\n",
+    "\n",
+    "\n",
+    "compute_energy(power, op_pt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.69565217 0.93478261]\n",
+      " [0.84782609 0.73913043]\n",
+      " [0.89130435 0.        ]\n",
+      " [0.91304348 0.        ]\n",
+      " [0.89130435 0.95652174]\n",
+      " [0.         1.        ]]\n",
+      "[[1.28957244 1.76653547]\n",
+      " [1.57166641 1.39679549]\n",
+      " [1.65226469        inf]\n",
+      " [1.69256382        inf]\n",
+      " [1.65226469 1.80761769]\n",
+      " [       inf 1.88978213]]\n",
+      "9.573243251831904\n"
+     ]
+    }
+   ],
+   "source": [
+    "power = np.array([1.85376038, 1.88978213])\n",
+    "op_pt = np.array([[32, 43],\n",
+    "       [39, 34],\n",
+    "       [41,  0],\n",
+    "       [42,  0],\n",
+    "       [41, 44],\n",
+    "       [ 0, 46]])\n",
+    "\n",
+    "compute_energy(power, op_pt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.4255319148483477 --]\n",
+      "  [0.32978723400746945 0.9999999998936171]\n",
+      "  [0.47872340420439113 --]\n",
+      "  [0.49999999994680855 0.8829787233103215]\n",
+      "  [0.5106382978180173 --]\n",
+      "  [0.4042553191059303 0.8617021275679041]]\n",
+      "\n",
+      " [[0.34042553187867813 0.4574468084619738]\n",
+      "  [0.414893616977139 0.36170212762109555]\n",
+      "  [0.4361702127195564 --]\n",
+      "  [0.4468085105907651 --]\n",
+      "  [0.4361702127195564 0.46808510633318245]\n",
+      "  [-- 0.48936170207559987]]]\n",
+      "[[[1.71445573 0.41026295]]\n",
+      "\n",
+      " [[1.85376038 1.88978213]]]\n",
+      "[[[0.7295556297096218 --]\n",
+      "  [0.5654056130249568 0.41026294995635504]\n",
+      "  [0.8207500834233245 --]\n",
+      "  [0.8572278649088056 0.36225345581252627]\n",
+      "  [0.8754667556515463 --]\n",
+      "  [0.6930778482241408 0.3535244568772847]]\n",
+      "\n",
+      " [[0.6310673633371204 0.8644748040569707]\n",
+      "  [0.7691133490671156 0.6835382171613258]\n",
+      "  [0.8085550592756857 --]\n",
+      "  [0.8282759143799707 --]\n",
+      "  [0.8085550592756857 0.884578869267598]\n",
+      "  [-- 0.9247869996888525]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Any at 0x7fb0a4237070>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy.ma as ma\n",
+    "\n",
+    "class Any():\n",
+    "    def __init__(self, op_pt_list, mch_working_power_list) -> None:\n",
+    "\n",
+    "        self.op_pt = np.array(op_pt_list)\n",
+    "        self.pt_lower_bound = np.min(self.op_pt)\n",
+    "        self.pt_upper_bound = np.max(self.op_pt)\n",
+    "        self.true_op_pt = np.copy(self.op_pt) # 操作的真实加工时间\n",
+    "        self.mch_working_power = np.array(mch_working_power_list)\n",
+    "        \n",
+    "        self.process_relation = (self.op_pt != 0)  # 一个布尔三维数组，表示操作之间的兼容关系，True 表示兼容。\n",
+    "        self.reverse_process_relation = ~self.process_relation  # \n",
+    "        # normalize the processing time\n",
+    "        self.op_pt = (self.op_pt - self.pt_lower_bound) / (self.pt_upper_bound - self.pt_lower_bound + 1e-8)\n",
+    "\n",
+    "        self.op_pt = ma.array(self.op_pt, mask=self.reverse_process_relation)\n",
+    "        \n",
+    "        self.op_energy = self.op_pt * self.mch_working_power[:, np.newaxis, :]\n",
+    "        print(self.op_pt)\n",
+    "        print(self.mch_working_power[:, np.newaxis, :])\n",
+    "        print(self.op_energy)\n",
+    "        min_energy_per_op = np.array(np.min(self.op_energy, axis=-1))\n",
+    "        # print(min_energy_per_op)\n",
+    "        self.total_min_energy = np.sum(min_energy_per_op, axis=-1)\n",
+    "        # print(self.total_min_energy)\n",
+    "op_pt_list = [np.array([[40,  0],\n",
+    "       [31, 94],\n",
+    "       [45,  0],\n",
+    "       [47, 83],\n",
+    "       [48,  0],\n",
+    "       [38, 81]]), np.array([[32, 43],\n",
+    "       [39, 34],\n",
+    "       [41,  0],\n",
+    "       [42,  0],\n",
+    "       [41, 44],\n",
+    "       [ 0, 46]])]\n",
+    "\n",
+    "mch_working_power_list = [np.array([1.71445573, 0.41026295]), np.array([1.85376038, 1.88978213])]\n",
+    "\n",
+    "Any(op_pt_list, mch_working_power_list)"
    ]
   }
  ],
