--- a/experiment/grad_test.ipynb
+++ b/experiment/grad_test.ipynb
@@ -314,6 +314,39 @@
     "print(\"每个环境的总待机时间：\")\n",
     "print(env_idle_time, mch_idle_power)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.17 0.42 0.42\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_dividends(total_value, product_prices):\n",
+    "    # 计算第一个产品的总价值（打五折）\n",
+    "    if len(product_prices) < 2: return \"\"\n",
+    "    product_prices[0] = product_prices[0] * 0.5\n",
+    "    product_prices[1] = 0\n",
+    "    # 计算后面产品的总价值\n",
+    "    remaining_value = sum(product_prices)\n",
+    "    product_prices[1] = total_value - remaining_value\n",
+    "    # 如果后面的产品总价值小于等于第一个产品的总价值\n",
+    "    \n",
+    "    dividend_ratios = [\"{:.2f}\".format(price / total_value) for price in product_prices]\n",
+    "    return \" \".join(dividend_ratios)\n",
+    "# 示例用法\n",
+    "total_value = 30\n",
+    "product_prices = [10, 30, 12.5]\n",
+    "dividends = calculate_dividends(total_value, product_prices)\n",
+    "print(dividends)\n"
+   ]
   }
  ],
  "metadata": {
