--- a/experiment/model_test.ipynb
+++ b/experiment/model_test.ipynb
@@ -388,6 +388,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "from params import parser\n",
+    "from train.Trainer import DANMkEcTrainer\n",
+    "n_j = 10\n",
+    "n_m = 5\n",
+    "\n",
+    "TIMESTAMP = \"{0:%Y-%m-%dT%H-%M-%S/}\".format(datetime.now())\n",
+    "\n",
+    "def train_model(n_j, n_m, model_suffix, factor_Mk, factor_Ec):\n",
+    "    configs = parser.parse_args(args=[\n",
+    "        \"--logdir\", f\"./runs/EcMk{n_j}-{n_m}/{factor_Mk}-{factor_Ec}/{TIMESTAMP}\",\n",
+    "        \"--model_suffix\", model_suffix,\n",
+    "        \"--max_updates\", \"2000\",\n",
+    "        \"--n_j\", f\"{n_j}\",\n",
+    "        \"--n_m\", f\"{n_m}\",\n",
+    "        \"--fea_j_input_dim\", \"12\", \n",
+    "        \"--fea_m_input_dim\", \"9\",\n",
+    "        '--factor_Mk', f\"{factor_Mk}\",\n",
+    "        '--factor_Ec', f\"{factor_Ec}\",\n",
+    "        \"--model_source\", \"SD2EC\",\n",
+    "        \"--data_source\", \"SD2EC\",\n",
+    "        \"--num_envs\", \"20\"\n",
+    "        ,\"--reset_env_timestep\", \"50\"\n",
+    "        ,\"--seed_train\", \"234\"\n",
+    "        ,\"--low\", \"5\"\n",
+    "        ,'--lr', \"3e-4\",\n",
+    "        ])\n",
+    "    trainer = DANMkEcTrainer(configs)\n",
+    "\n",
+    "    trainer.train()\n",
+    "\n",
+    "\n",
+    "# for n_j, n_m in [(5,5), (10,10), (20,20), (15, 15), (25,25)]:\n",
+    "#     train_model(n_j, n_m, \"ECMK\", 0.0, 1.0)\n",
+    "\n",
+    "# for i in range(0, 10):\n",
+    "#     factor_Mk = i / 10.0\n",
+    "#     factor_Ec = 1 - factor_Mk\n",
+    "#     print(i / 10.0)\n",
+    "#     train_model(10, 5, \"ECMK\", factor_Mk, factor_Ec)\n",
+    "\n",
+    "train_model(5, 5, \"ECMK\", 0.0, 1.0)\n",
+    "# train_model(10, 10, \"ECMK\", 0.0, 1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
