--- a/plot_imgs/plot_MAMLECMK.ipynb
+++ b/plot_imgs/plot_MAMLECMK.ipynb
@@ -45,7 +45,7 @@
     "notebook_dir = os.getcwd()\n",
     "print(notebook_dir)\n",
     "# 将工作目录更改为上一级目录\n",
-    "os.chdir(\"/home/wlc/FJSP-DRL-MAML\")\n",
+    "os.chdir(\"/home/wlc/FJSP-DRL-main\")\n",
     "\n"
    ]
   },
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instances = [ \"10x5EC+ECMK\", \"20x5EC+ECMK\", \"15x10EC+ECMK\", \"20x10EC+ECMK\", ]\n",
+    "instances = [ \"10x5EC+ECMK\", \"20x5EC+ECMK\", \"15x10EC+ECMK\", \"20x10EC+ECMK\",]\n",
     "test_data_list = [ \"10x5+mix\", \"20x5+mix\", \"15x10+mix\", \"20x10+mix\",]\n"
    ]
   },
