--- a/data_utils.ipynb
+++ b/data_utils.ipynb
@@ -221,52 +221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([2, 2, 3, 5, 3, 5, 3, 5, 2, 5]),\n",
-       " array([[49., 87., 28., 96.,  0.],\n",
-       "        [21., 11., 47.,  0., 54.],\n",
-       "        [61.,  0., 38.,  0.,  0.],\n",
-       "        [61.,  0.,  0.,  0., 15.],\n",
-       "        [ 0.,  0., 27., 22.,  0.],\n",
-       "        [87.,  0.,  0., 94.,  0.],\n",
-       "        [ 0., 55., 33., 60., 64.],\n",
-       "        [89., 50.,  0.,  0.,  0.],\n",
-       "        [ 0., 20.,  0., 21.,  0.],\n",
-       "        [ 0., 74., 56.,  0., 89.],\n",
-       "        [ 0., 56.,  0.,  0., 93.],\n",
-       "        [ 0., 47., 95.,  0.,  0.],\n",
-       "        [79.,  0.,  4.,  2., 58.],\n",
-       "        [68., 47., 88., 32.,  0.],\n",
-       "        [ 0., 69.,  0.,  6.,  0.],\n",
-       "        [49.,  0., 66.,  0.,  0.],\n",
-       "        [67., 92., 95.,  0., 79.],\n",
-       "        [87., 97., 17., 23., 18.],\n",
-       "        [ 0., 49., 75.,  0., 49.],\n",
-       "        [ 2.,  0., 64.,  0., 75.],\n",
-       "        [ 0.,  0.,  0., 64.,  0.],\n",
-       "        [92., 91.,  0., 52., 13.],\n",
-       "        [72., 82., 95., 63., 27.],\n",
-       "        [80.,  0., 53.,  0.,  0.],\n",
-       "        [93., 27., 77., 98., 55.],\n",
-       "        [ 0.,  0.,  0.,  0., 86.],\n",
-       "        [30., 47., 69., 56., 87.],\n",
-       "        [ 0., 34.,  0., 67.,  0.],\n",
-       "        [ 0., 34.,  0.,  0., 41.],\n",
-       "        [83., 44., 26.,  5., 60.],\n",
-       "        [24.,  0.,  0., 13.,  0.],\n",
-       "        [ 0., 86.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0., 16., 61., 12.],\n",
-       "        [14.,  0.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0.,  0., 31.]]),\n",
-       " 2.8)"
+       "(array([5, 4, 4]),\n",
+       " array([[67., 42.],\n",
+       "        [91., 85.],\n",
+       "        [41., 61.],\n",
+       "        [ 7., 64.],\n",
+       "        [59., 53.],\n",
+       "        [36.,  0.],\n",
+       "        [15.,  4.],\n",
+       "        [ 4.,  0.],\n",
+       "        [ 0., 93.],\n",
+       "        [27.,  0.],\n",
+       "        [ 0., 24.],\n",
+       "        [74.,  7.],\n",
+       "        [82.,  0.]]),\n",
+       " 1.5384615384615385)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,8 +274,8 @@
     "    return job_length, op_pt, op_per_mch\n",
     "\n",
     "# Example call\n",
-    "num_jobs = 10\n",
-    "num_machines = 5\n",
+    "num_jobs = 3\n",
+    "num_machines = 2\n",
     "job_length, op_pt, op_per_mch = generate_flexible_job_shop(num_jobs, num_machines)\n",
     "job_length, op_pt, op_per_mch"
    ]
@@ -440,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
