--- a/plot_imgs/rewards_loss_plot.ipynb
+++ b/plot_imgs/rewards_loss_plot.ipynb
@@ -75,7 +75,7 @@
     "    rewards = np.array(rewards).astype(np.float64)\n",
     "    time_steps = np.arange(rewards.shape[0])\n",
     "    print(rewards.shape)\n",
-    "    plt.plot(rewards)0\n",
+    "    plt.plot(rewards)\n",
     "    # plt.fill_between(time_steps, rewards.min(axis=-1), rewards.max(axis=-1), color='gray', alpha=0.3, label='Min-Max Range')\n",
     "\n",
     "    # 添加标题和轴标签\n",
